--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,7 @@
 @import '../../node_modules/bootstrap/scss/bootstrap';
+@import './partials/variables';
+@import './partials/mixins';
+
+.color-red {
+    background-color: $color-red;
+}
